# verifier

./: .gitignore  README.md  build.gradle  gradle.properties  license.txt  settings.gradle  third_party_licenses.txt
CommandCore/: build.gradle
CryptoCore/: build.gradle
CryptoCore/src/test/resources/certs/: IPCS.cer  IPCS_agilex.cer  IPCS_agilex.crl  cert_withAKIandSKI.pem  cert_withoutAKIandSKI.pem  leaf-not-revoked.crt
ProtocolCore/: build.gradle
ServiceCore/: build.gradle  gradle.properties
ServiceCore/src/main/resources/licenses/: third_party_licenses.md
TestLibrary/: build.gradle
TestLibrary/src/main/resources/testfiles/: invalid_ams_metal_csv_report.csv  signed_aes.ccert  signed_bbram_aes.ccert  signed_efuse_dimk_wrapped_aes.ccert  signed_efuse_dimk_wrapped_aes_wrong.ccert
TestLibrary/src/main/resources/testfiles/certs/: 01_8877665544332211.cer  03_8877665544332211_Sa_wo9UsAMERomMb-PMqhuM_nL0.cer  IPCSSigningCA.crl  attestation_5ADF841DDEAD944E_00000002.cer  deviceid_0123456789abcdef_H-e6TM4R12mufV0ZECGRv-fzc-I.cer  enrollment_0123456789abcdef_00_P_K_MiGWs09f5Dt3G2CGjULJGIg.cer  firmware_certificate.der  iiduds_0123456789abcdef_DW43eBZHek7h0vG3.cer  invalid.pem  leaf-no-crl.crt
TestLibrary/src/main/resources/testfiles/keys/: deviceIdKey_66E88955CD985B08.pem  deviceIdKey_D1DE443400076.pem  deviceIdKey_FEDCBA9876543210_efuse.pem  deviceIdKey_FEDCBA9876543210_puf.pem  enrollmentKeySvn0_D1DE443400076.pem  enrollmentKeySvn1_FEDCBA9876543210_efuse.pem  enrollmentKeySvn1_FEDCBA9876543210_puf.pem  enrollmentKeySvn31_66E88955CD985B08.pem  pufAttKey_D1DE443400076.pem
TestLibrary/src/main/resources/testfiles/romext/: dm_signed_2021_03_16.romext  dm_signed_2021_03_16_without_sig.romext  f7romext.romext  f7romext_without_sig.romext
Utils/: build.gradle
Verifier/: build.gradle  gradle.properties  third_party_licenses.md  verifier_third_party_licenses.md
Verifier/src/integrationTest/resources/: config.properties
Verifier/src/main/resources/: config.properties
Verifier/src/main/resources/licenses/: third_party_licenses.md
Verifier/src/main/resources/system-console/: initialize-script.txt  send-packet-script.txt
Verifier/src/test/resources/: config_in_classpath.properties  logback.xml
Verifier/src/test/resources/certs/: CA.pem  IPCSSigningCA.cer
Verifier/src/test/resources/config/: config_with_all_set.properties  config_with_empty_optional.properties  config_with_root_hash_whitespaces.properties  config_without_optional.properties  config_wrong.properties  config_wrong_ct_exponent.properties
Verifier/src/test/resources/evidence/: agilex.rim  stratix10.rim
Verifier/src/test/resources/integration/: RIM_Signing_agilex_5WL28Ty-Nta3Si1dR3ralQ7jFHw.cer  RIM_Signing_agilex_5WL28Ty-Nta3Si1dR3ralQ7jFHw.xrim  alias_certificate.der  device_id_enrollment_certificate.der  firmware_certificate.der  ghrd_sha_384.rim  ghrd_sha_384_invalid_hps_section.rim  signed_spl_hps.rim  signed_spl_hps_invalid_io_section.rim
Verifier/src/test/resources/responses/: device_id_self-signed_certificate.der  enrollment_self-signed_certificate.der
fpgaCertCore/: build.gradle  gradle.properties
fpgaCertCore/src/test/java/other/: ChainVerifierTestAliasEfuseIT.java  ChainVerifierTestAliasEfuseSpdmIT.java  ChainVerifierTestS10IT.java
fpgaCertCore/src/test/resources/certs/: certWithoutBasicConstraints.pem
fpgaCertCore/src/test/resources/testfiles/: design_rim_signed.rim  design_rim_unsigned.rim  design_signed_rim_signing_public.pem  design_xrim_signed.xrim  design_xrim_unsigned.xrim  fw_rim_signed.rim  fw_rim_unsigned.rim  fw_signed_rim_signing_public.pem  fw_xrim_signed.xrim  fw_xrim_unsigned.xrim  rim_unsigned_comid.cbor
gradle/: checkstyle.gradle  common.gradle  libs.versions.toml
spdm_wrapper/: CMakeLists.txt  config.txt  dependencies.txt.in  main.c  main.h
workload/: build.gradle  gradle.properties  third_party_licenses.md  workload_third_party_licenses.md
workload/src/main/resources/: logback.xml
workload/src/main/resources/licenses/: third_party_licenses.md
workload/src/test/resources/: logback-test.xml
(+1688 files in other folders)
